# do-note-pad

./: .gitignore  DISTRIBUTION.md  PACKAGING.md  README.md  build.sh  create_deb.sh  create_windows_installer.nsi  donotepad.spec  donotepad_windows.spec  generate_icons.sh  main.py  pyproject.toml  requirements.txt  run.sh  sample_config.json  setup.sh  setup_and_build.sh
assets/icons/pixmaps/: donotepad.xpm
src/: __init__.py
src/models/: notes_manager.py  todo_item.py  todo_manager.py
